[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
lazy_static = "1.4.0"
regex = "1.7.0"
take-until = "0.1.0"
indexmap = "1.9.2"
infinitable = "1.3.0"
bit-set = "0.5.3"

[features]
